--- a/index.html
+++ b/index.html
@@ -1,68 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beny | Onchain Builder</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Beny | Base Onchain Explorer</title>
   <style>
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes glow {
+      from { text-shadow: 0 0 10px #00a3ff; }
+      to { text-shadow: 0 0 25px #00a3ff, 0 0 40px #00a3ff; }
+    }
+
     body {
-      background-color: #0d1117;
-      color: #c9d1d9;
-      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      font-family: "Inter", sans-serif;
+      background: radial-gradient(circle at top left, #001F3F, #000814);
+      color: #E8F1FF;
       text-align: center;
-      padding: 40px;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
     }
+
     h1 {
-      color: #3b82f6;
-      font-size: 2.2rem;
+      font-size: 3rem;
+      color: #00a3ff;
+      animation: glow 3s ease-in-out infinite alternate, fadeIn 1s ease-in-out;
     }
-    a {
-      color: #58a6ff;
+
+    p {
+      font-size: 1.2rem;
+      color: #a9d6ff;
+      opacity: 0.8;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    .link-btn {
+      background: #00a3ff;
+      color: #000814;
+      padding: 0.8rem 1.8rem;
+      border-radius: 10px;
       text-decoration: none;
+      font-weight: 600;
+      font-size: 1.1rem;
+      margin-top: 2rem;
+      display: inline-block;
+      transition: 0.3s ease;
+      animation: fadeIn 2.5s ease-in-out;
     }
-    a:hover {
-      text-decoration: underline;
+
+    .link-btn:hover {
+      background: #0081d6;
+      box-shadow: 0 0 20px #00a3ff;
+      transform: translateY(-3px);
     }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
+
+    footer {
+      position: absolute;
+      bottom: 20px;
+      font-size: 0.9rem;
+      opacity: 0.6;
+      color: #88aadd;
     }
-    .project {
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 12px;
-      padding: 16px;
-      margin: 10px 0;
-      transition: 0.3s;
+
+    footer a {
+      color: #00a3ff;
+      text-decoration: none;
+      transition: 0.2s;
     }
-    .project:hover {
-      background: rgba(59, 130, 246, 0.15);
+
+    footer a:hover {
+      text-shadow: 0 0 8px #00a3ff;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>👋 Hey, I'm Beny</h1>
-    <p>Exploring onchain experiments, Base ecosystem, and small deploy rituals 😄</p>
+  <h1>👋 Hey, I'm Beny</h1>
+  <p>Exploring onchain life one deploy, one ritual at a time.</p>
 
-    <h3>🧱 What I'm Building</h3>
-    <div class="project">
-      <b>BanditBase.sol</b><br>
-      <a href="https://basescan.org/address/0x669E987880d694E975198555331025944f438aCD" target="_blank">View on BaseScan</a> · 
-      <a href="https://github.com/Beny25/bandit-base-daily" target="_blank">GitHub Repo</a>
-    </div>
+  <a class="link-btn" href="https://banditbase.beny25.github.io" target="_blank">⚡ Visit Bandit Base Daily</a>
 
-    <div class="project">
-      <b>GMbandit (coming soon)</b><br>
-      A Base ritual app for daily onchain messages ⚡
-    </div>
-
-    <h3>💬 Connect</h3>
-    <p>
-      🧠 <a href="https://github.com/Beny25" target="_blank">GitHub</a> <br>
-      🐦 <a href="https://twitter.com/alidepok1" target="_blank">@alidepok1</a>
-    </p>
-
-    <p>“Survived another deploy ritual — barely.” ⚙️</p>
-  </div>
+  <footer>
+    Built by <a href="https://twitter.com/alidepok1" target="_blank">Bandit.base.eth</a> · Powered by Base 💠
+  </footer>
 </body>
 </html>
