--- a/index.html
+++ b/index.html
@@ -2,94 +2,118 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Beny | Base Onchain Explorer</title>
   <style>
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    :root{
+      --base-blue:#00a3ff;
+      --ink:#E8F1FF;
+      --soft:#a9d6ff;
+      --bg1:#000814;
+      --bg2:#001F3F;
     }
 
-    @keyframes glow {
-      from { text-shadow: 0 0 10px #00a3ff; }
-      to { text-shadow: 0 0 25px #00a3ff, 0 0 40px #00a3ff; }
+    /* motions */
+    @keyframes fadeIn { from{opacity:0; transform:translateY(16px)} to{opacity:1; transform:translateY(0)} }
+    @keyframes glow { from{ text-shadow:0 0 10px var(--base-blue)} to{ text-shadow:0 0 26px var(--base-blue), 0 0 40px var(--base-blue)} }
+    @keyframes floaty { 0%{transform:translateY(0)} 50%{transform:translateY(-6px)} 100%{transform:translateY(0)} }
+
+    /* layout */
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      min-height:100vh;
+      display:flex; align-items:center; justify-content:center; flex-direction:column;
+      background: radial-gradient(circle at 20% 0%, var(--bg2), var(--bg1) 60%);
+      color:var(--ink);
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+      overflow-x:hidden;
+      padding: 48px 20px;
     }
 
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: "Inter", sans-serif;
-      background: radial-gradient(circle at top left, #001F3F, #000814);
-      color: #E8F1FF;
-      text-align: center;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
+    .wrap{ width:100%; max-width:780px; text-align:center; animation:fadeIn .8s ease-out }
+    h1{
+      font-size: clamp(28px, 5vw, 44px);
+      margin:0 0 8px;
+      color:var(--base-blue);
+      animation:glow 3s ease-in-out infinite alternate, fadeIn .8s ease-out;
+    }
+    .tagline{
+      color:var(--soft);
+      opacity:.9;
+      margin:0 0 24px;
+      font-size: clamp(14px, 2.6vw, 18px);
+      animation:fadeIn 1.1s ease-out;
     }
 
-    h1 {
-      font-size: 3rem;
-      color: #00a3ff;
-      animation: glow 3s ease-in-out infinite alternate, fadeIn 1s ease-in-out;
+    /* card */
+    .card{
+      margin: 10px auto 26px;
+      padding: 18px 20px;
+      background: rgba(255,255,255,.05);
+      border:1px solid rgba(255,255,255,.12);
+      border-radius:16px;
+      box-shadow: 0 0 24px rgba(0,163,255,.18);
+      animation:fadeIn 1.2s ease-out, floaty 6s ease-in-out infinite;
     }
+    .card p{ margin: 8px 0 0; color:#cfe6ff; font-size:15px }
 
-    p {
-      font-size: 1.2rem;
-      color: #a9d6ff;
-      opacity: 0.8;
-      animation: fadeIn 2s ease-in-out;
+    /* buttons */
+    .links{ display:flex; flex-wrap:wrap; gap:12px; justify-content:center; margin-top:18px }
+    .btn{
+      padding:10px 14px; border-radius:10px; text-decoration:none; font-weight:600;
+      color:#00111a; background:var(--base-blue);
+      transition:.25s ease; display:inline-flex; align-items:center; gap:8px;
     }
+    .btn:hover{ transform:translateY(-2px); box-shadow:0 0 18px var(--base-blue) }
+    .btn.ghost{
+      background:rgba(255,255,255,.06); color:var(--ink); border:1px solid rgba(255,255,255,.14)
+    }
+    .btn.ghost:hover{ box-shadow:0 0 16px rgba(255,255,255,.18); border-color:rgba(255,255,255,.26) }
 
-    .link-btn {
-      background: #00a3ff;
-      color: #000814;
-      padding: 0.8rem 1.8rem;
-      border-radius: 10px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 1.1rem;
-      margin-top: 2rem;
-      display: inline-block;
-      transition: 0.3s ease;
-      animation: fadeIn 2.5s ease-in-out;
+    footer{
+      margin-top: 26px;
+      color:#91caff; opacity:.75; font-size:14px; text-align:center;
     }
-
-    .link-btn:hover {
-      background: #0081d6;
-      box-shadow: 0 0 20px #00a3ff;
-      transform: translateY(-3px);
-    }
-
-    footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.9rem;
-      opacity: 0.6;
-      color: #88aadd;
-    }
-
-    footer a {
-      color: #00a3ff;
-      text-decoration: none;
-      transition: 0.2s;
-    }
-
-    footer a:hover {
-      text-shadow: 0 0 8px #00a3ff;
-    }
+    footer a{ color:var(--base-blue); text-decoration:none }
+    footer a:hover{ text-decoration:underline }
   </style>
 </head>
 <body>
-  <h1>👋 Hey, I'm Beny</h1>
-  <p>Exploring onchain life one deploy, one ritual at a time.</p>
+  <main class="wrap">
+    <h1>👋 Hey, I'm Beny (Bandit.base.eth)</h1>
+    <p class="tagline">Exploring onchain rituals on <b>Base</b> one deploy, one survival at a time.</p>
 
-  <a class="link-btn" href="https://banditbase.beny25.github.io" target="_blank">⚡ Visit Bandit Base Daily</a>
+    <section class="card">
+      <div class="links">
+        <!-- social / identity -->
+        <a class="btn" href="https://farcaster.xyz/banditi" target="_blank">🌐 Farcaster</a>
+        <a class="btn ghost" href="https://base.app/profile/0x4ae70118dd2cb814404daaa064dab470b7f76542" target="_blank">💠 Base app profile</a>
+        <a class="btn ghost" href="https://zora.co/invite/banditi" target="_blank">🖼️ Zora</a>
+      </div>
 
-  <footer>
-    Built by <a href="https://twitter.com/alidepok1" target="_blank">Bandit.base.eth</a> · Powered by Base 💠
-  </footer>
+      <div class="links" style="margin-top:14px">
+        <!-- project / onchain -->
+        <a class="btn" href="https://basescan.org/address/0x669E987880d694E975198555331025944f438aCD" target="_blank">🔗 BaseScan: BanditBase.sol</a>
+        <a class="btn ghost" href="https://github.com/Beny25/bandit-base-daily" target="_blank">🧱 GitHub: bandit-base-daily</a>
+        <a class="btn ghost" href="https://banditbase.beny25.github.io" target="_blank">⚡ Bandit Base Daily (site)</a>
+      </div>
+
+      <p style="margin-top:16px; font-style:italic; opacity:.9">
+        “Others just GM. We GM, GN, and sometimes go to sleep.” 😴⚡
+      </p>
+    </section>
+
+    <!-- teaser -->
+    <section class="card" style="animation-delay:.1s">
+      <h3 style="margin:0 0 6px; color:#bfe2ff">🌅 Coming Soon: GM Ritual</h3>
+      <p style="margin:0">From a simple onchain message updater… into a daily ritual on Base.</p>
+    </section>
+
+    <footer>
+      Built by <a href="https://farcaster.xyz/banditi" target="_blank">Bandit.base.eth</a> —
+      a proud Base contributor 💙
+    </footer>
+  </main>
 </body>
 </html>
