--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="links" style="margin-top:14px">
         <!-- project / onchain -->
         <a class="btn" href="https://basescan.org/address/0x669E987880d694E975198555331025944f438aCD" target="_blank">🔗 BaseScan: BanditBase.sol</a>
-        <a class="btn ghost" href="https://github.com/Beny25/bandit-base-daily" target="_blank">🧱 GitHub: bandit-base-daily</a>
+        <a class="btn ghost" href="https://github.com/Beny25/" target="_blank">🧱 GitHub: bandit-base-daily</a>
         <a class="btn ghost" href="https://banditbase.beny25.github.io" target="_blank">⚡ Bandit Base Daily (site)</a>
       </div>
 
@@ -111,7 +111,7 @@
     </section>
 
     <footer>
-      Built by <a href="https://farcaster.xyz/banditi" target="_blank">Bandit.base.eth</a> —
+      Built by <a href="https://x.com/Alidepok1" target="_blank">Bandit.base.eth</a> —
       a proud Base contributor 💙
     </footer>
   </main>
