--- a/index.html
+++ b/index.html
@@ -128,15 +128,14 @@
       <div class="links">
         <!-- social / identity -->
         <a class="btn" href="https://farcaster.xyz/banditi" target="_blank">🟦 Farcaster</a>
-        <a class="btn ghost" href="https://base.app/profile/0x4ae70118dd2cb814404daaa064dab470b7f76542" target="_blank">⏹️ Base app profile</a>
-        <a class="btn ghost" href="https://zora.co/invite/banditi" target="_blank">🔵 Zora</a>
+        <a class="btn ghost" href="https://base.app/profile/bandit" target="_blank">⏹️ Base app profile</a>
+        <a class="btn ghost" href="https://zora.co/@banditi" target="_blank">🔵 Zora</a>
       </div>
 
       <div class="links" style="margin-top:14px">
         <!-- project / onchain -->
         <a class="btn" href="https://basescan.org/address/0x669E987880d694E975198555331025944f438aCD" target="_blank">🔗 BaseScan: BanditBase.sol</a>
         <a class="btn ghost" href="https://github.com/Beny25/" target="_blank">🧱 GitHub: bandit-base-daily</a>
-        <a class="btn ghost" href="https://banditbase.beny25.github.io" target="_blank">⚡ Bandit Base Daily (site)</a>
       </div>
 
       <p style="margin-top:16px; font-style:italic; opacity:.9">
